[project]
name = "limelight"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pillow>=10.4.0",
]

[project.optional-dependencies]
rpi = [
    "adafruit-circuitpython-ssd1306>=2.12.17",
    "rpi-gpio>=0.7.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
